--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "spotify-backend",
+  "name": "acidwave-backend",
   "version": "1.0.0",
-  "description": "Spotify clone backend API with Supabase",
+  "description": "acidwave clone backend API with Supabase",
   "type": "module",
   "main": "src/server.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "start": "node src/server.js",
     "build": "echo 'No build step required for Node.js'"
   },
-  "keywords": ["spotify", "music", "api"],
+  "keywords": ["acidwave", "music", "api"],
   "author": "",
   "license": "MIT",
   "dependencies": {
