--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: spotify-backend
+    container_name: acidwave-backend
     restart: unless-stopped
     ports:
       - "3000:3000"
@@ -18,7 +18,7 @@ services:
     env_file:
       - ./backend/.env
     networks:
-      - spotify-network
+      - acidwave-network
     healthcheck:
       test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
       interval: 30s
@@ -29,17 +29,17 @@ services:
   # Frontend (Nginx serving static files)
   frontend:
     build:
-      context: ./spotify-app
+      context: ./acidwave-app
       dockerfile: Dockerfile
-    container_name: spotify-frontend
+    container_name: acidwave-frontend
     restart: unless-stopped
     ports:
       - "80:80"
     depends_on:
       - backend
     networks:
-      - spotify-network
+      - acidwave-network
 
 networks:
-  spotify-network:
+  acidwave-network:
     driver: bridge
