Add debug logging and update railway config

--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,14 @@
 # Railway 配置文件
+# 注意：如果已在 Railway 中设置 Root Directory = backend，
+# 则不需要 cd backend 命令
 
 [build]
 builder = "nixpacks"
-buildCommand = "cd backend && npm ci"
 
 [deploy]
-startCommand = "cd backend && npm start"
+startCommand = "npm start"
 healthcheckPath = "/api/health"
-healthcheckTimeout = 30
+healthcheckTimeout = 100
 restartPolicyType = "on_failure"
-restartPolicyMaxRetries = 3
+restartPolicyMaxRetries = 10
 
